tests/paczka1/small_fuzzy/39674209.err
Error in line 1: VgYrifSJhP S339 36,8
Error in line 8: hzjW7 A827 51,0
Error in line 12: S803 S339 -5,9
